also install which command in all containers (required by R 'graphics' extension, for example)

--- a/centos-7.9/Dockerfile
+++ b/centos-7.9/Dockerfile
@@ -1,5 +1,5 @@
 FROM centos:7.9.2009
 RUN yum -y install epel-release && yum -y install python python2-pip Lmod
-RUN yum -y install bzip2 curl diffutils file gcc-c++ git gzip make openssl-devel rdma-core-devel patch tar unzip xz
+RUN yum -y install bzip2 curl diffutils file gcc-c++ git gzip make openssl-devel rdma-core-devel patch tar unzip which xz
 RUN yum -y update ca-certificates
 RUN python -m pip install archspec
