--- a/centos-8.4/Dockerfile
+++ b/centos-8.4/Dockerfile
@@ -8,5 +8,5 @@ RUN sed -i 's/mirrorlist/#mirrorlist/g' /etc/yum.repos.d/CentOS-* \
 # enable PowerTools repository, required by Lmod in EPEL
 && dnf -y install dnf-plugins-core && dnf config-manager --set-enabled powertools \
 && dnf -y install epel-release && dnf -y install python3 Lmod
-RUN dnf -y install bzip2 curl diffutils file gcc-c++ git gzip make openssl-devel rdma-core-devel patch tar unzip xz
+RUN dnf -y install bzip2 curl diffutils file gcc-c++ git gzip make openssl-devel rdma-core-devel patch tar unzip which xz
 RUN python3 -m pip install archspec
