--- a/fedora-35/Dockerfile
+++ b/fedora-35/Dockerfile
@@ -1,4 +1,4 @@
 FROM fedora:35
 RUN dnf -y install python3 python3-pip Lmod
-RUN dnf -y install bzip2 curl diffutils file gcc-c++ git gzip make openssl-devel rdma-core-devel patch tar unzip xz
+RUN dnf -y install bzip2 curl diffutils file gcc-c++ git gzip make openssl-devel rdma-core-devel patch tar unzip which xz
 RUN python3 -m pip install archspec
