--- a/ubuntu-20.04/Dockerfile
+++ b/ubuntu-20.04/Dockerfile
@@ -5,5 +5,5 @@ RUN apt update \
 && LMOD_VERSION=8.6.12 \
 && curl -OL https://github.com/surak/Lmod/releases/download/${LMOD_VERSION}/lmod_${LMOD_VERSION}_all.deb \
 && apt install -y ./lmod_${LMOD_VERSION}_all.deb
-RUN apt install -y bzip2 diffutils file gcc g++ git gzip libibverbs-dev libssl-dev make patch tar unzip xz-utils
+RUN apt install -y bzip2 diffutils file gcc g++ git gzip libibverbs-dev libssl-dev make patch tar unzip which xz-utils
 RUN python3 -m pip install archspec
