add CentOS 7.9 container that also has openssl11 package installed

--- a/.github/workflows/build-publish-containers.yml
+++ b/.github/workflows/build-publish-containers.yml
@@ -13,6 +13,7 @@ jobs:
         tag:
           - centos-7.9
           - centos-7.9-no-openssl
+          - centos-7.9-openssl11
           - centos-8.4
           - fedora-35
           - opensuse-15.3
