--- a/centos-7.9-no-openssl/Dockerfile
+++ b/centos-7.9-no-openssl/Dockerfile
@@ -1,2 +1,2 @@
-FROM ghcr.io/easybuilders/easybuild-containers/centos:7.9
+FROM ghcr.io/easybuilders/centos-7.9
 RUN yum -y remove openssl openssl-devel
