--- a/fedora-35/Dockerfile
+++ b/fedora-35/Dockerfile
@@ -3,4 +3,4 @@ RUN useradd -ms /bin/bash easybuild
 RUN dnf -y install python3 python3-pip Lmod
 # glibc-langpack-en provides locale stuff (for en_US.UTF-8)
 RUN dnf -y install bzip2 curl diffutils file gcc-c++ git glibc-langpack-en gzip make openssl openssl-devel rdma-core-devel patch tar unzip which xz
-RUN python3 -m pip install archspec
+RUN python3 -m pip install archspec GitPython keyring keyrings.alt pycodestyle PyYAML rich
