--- a/rockylinux-8.5/Dockerfile
+++ b/rockylinux-8.5/Dockerfile
@@ -5,4 +5,4 @@ RUN dnf -y install dnf-plugins-core && dnf config-manager --set-enabled powertoo
 && dnf -y install epel-release && dnf -y install python3 Lmod
 # glibc-langpack-en provides locale stuff (for en_US.UTF-8)
 RUN dnf -y install bzip2 curl diffutils file gcc-c++ git glibc-langpack-en gzip make openssl openssl-devel rdma-core-devel patch tar unzip which xz
-RUN python3 -m pip install archspec
+RUN dnf -y install python3-cryptography && python3 -m pip install archspec GitPython keyring keyrings.alt pycodestyle PyYAML rich
